@@ -32,3 +32,7 @@ codecompletion.prefs.table.udfWithoutParams=UDF without params
 
 CodeCompletionPreferencesPanel.maxLastSelectedCompletionNames=If you call code completion without being in the scope of a table/view, for which number of tables the parser last found would you like to see colums on top of the completion list?
 CodeCompletionPreferencesPanel.numberOfTables=number of tables
+
+
+CodeCompletionPreferencesPanel.showRemarksInColumnCompletionNote=Choose this option to see column remarks in code completion lists.\nNote: If you change this option on a running Session you need to do a Session cache refresh (F5)
+CodeCompletionPreferencesPanel.showRemarksInColumnCompletionChk=Show remarks in column completion
